Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1127,3 +1127,35 @@ Key risks include container escape, insecure images, misconfigured privileges, e
   <summary>Show answer</summary>
 Containers enable consistent builds that run identically across development, testing, and production, reducing integration issues. Their portability and rapid startup times allow continuous integration and continuous deployment pipelines to deliver updates faster and scale dynamically with demand.
 </details>
+
+## 3.5.11 Serverless ##
+
+Serverless computing is a cloud computing model that allows developers to build and run applications without managing the underlying infrastructure. In serverless architectures, developers focus solely on writing code, while cloud providers handle the provisioning, scaling, and management of servers. Common serverless platforms include AWS Lambda, Azure Functions, and Google Cloud Functions.
+In a serverless environment, functions or small units of code are triggered by events, such as an HTTP request or a message in a queue. These functions run in stateless containers that are ephemeral, meaning they are spun up for the duration of the task and then terminated once the task is complete. This enables highly scalable, efficient, and cost-effective applications, especially for workloads that experience unpredictable or varying traffic.
+Serverless computing offers significant advantages in terms of reduced operational overhead, scalability, and cost optimization. However, it also introduces new security concerns that need to be addressed. 
+
+The most defining characteristic of serverless computing is that it **abstracts away the server infrastructure**. With serverless computing, developers no longer need to worry about provisioning, scaling, or managing servers. This is handled automatically by the cloud provider. The "serverless" model actually involves servers, but the responsibility for managing them lies with the cloud provider.
+Serverless computing operates on a pay-as-you-go model, where users are charged only for the execution time of their functions, based on the number of invocations and the resources consumed during execution. This can result in cost savings, as users only pay for the compute power they actually use, rather than maintaining idle servers.
+The scalability of serverless platforms is automatic. As demand for the application increases, the cloud provider dynamically allocates resources to handle the load, scaling up or down as needed. This makes serverless ideal for applications with unpredictable or fluctuating traffic.
+Serverless functions are typically short-lived and stateless. Each invocation is independent, meaning that the function does not retain any data or context between executions. This stateless nature can simplify application design, but it also presents challenges in terms of state management and data persistence.
+Another benefit of serverless computing is rapid deployment. Developers can quickly deploy small units of code and focus on specific business logic, which accelerates development cycles and allows for faster updates to applications.
+
+While serverless computing offers many benefits, it also introduces new vulnerabilities that must be addressed to ensure secure deployments.
+
+1. **Increased Attack Surface.** Serverless applications rely on multiple components, such as APIs, cloud functions, and storage services, which can increase the attack surface. Each function or service exposed to the internet may become a potential target for attackers. In serverless environments, it is easy for attackers to find and exploit exposed functions, potentially gaining access to sensitive data or taking control of the application. To mitigate this risk, it is important to implement strong access controls, API security practices, and network segmentation to limit the exposure of critical functions.
+
+2. **Lack of Visibility and Monitoring.** Serverless environments are highly abstracted, making it difficult to monitor the behavior of functions and track activity across multiple services. Since functions are ephemeral and often short-lived, traditional monitoring tools may struggle to capture logs and trace events, making it challenging to detect suspicious activity or diagnose performance issues.
+Organizations must implement specialized monitoring solutions designed for serverless architectures. These tools should provide deep visibility into function execution, enable logging, and allow the detection of anomalies and malicious behavior.
+
+3. **Third-Party Dependencies.** Serverless applications often rely on third-party services and APIs to function. These services may not always be secure, and vulnerabilities in third-party code or services can introduce risks into the application. If a third-party service is compromised, attackers may gain indirect access to serverless functions or sensitive data.
+To reduce this risk, organizations should conduct thorough security assessments of third-party services and APIs, including regular vulnerability scanning and establishing service-level agreements (SLAs) that include security provisions.
+
+4. **Insufficient Resource Isolation.** Although serverless functions run in isolated environments, the degree of isolation depends on the cloud provider and implementation. In some cases, functions could share underlying infrastructure resources, increasing the risk of cross-function attacks or privilege escalation. Misconfigurations or security gaps could allow an attacker to access data or other functions that they shouldn’t have access to.
+Using the principle of least privilege when assigning permissions to functions and leveraging isolation features, such as Virtual Private Cloud (VPC) configurations, can help mitigate these risks.
+
+5. **Data Exposure and Insecure APIs.** Many serverless applications involve data processing and storage in cloud services such as object storage or databases. If sensitive data is not properly encrypted, exposed data could be accessed by unauthorized users. Additionally, insecure APIs used to invoke serverless functions or interact with data storage could be a vector for attacks. To mitigate data exposure risks, data should always be encrypted both in transit and at rest. APIs should be protected using strong authentication, authorization, and encryption protocols, and should follow secure coding practices to prevent common vulnerabilities such as injection attacks.
+
+6. **Function Permissions and Least Privilege.** Serverless functions typically require permissions to access various cloud resources, such as databases, storage, and other services. If a function is granted excessive permissions, it could be exploited by an attacker to gain unauthorized access to critical infrastructure or sensitive data. Overly permissive roles can also allow attackers to escalate privileges or pivot to other parts of the system.
+To minimize this risk, organizations should assign functions only the minimum permissions required to complete their tasks. Identity and access management (IAM) roles should follow the principle of least privilege, ensuring that functions have access only to the resources necessary for their operation.
+
+7. **Cold Start Latency.** Serverless functions experience what is known as "cold start" latency, where there is a delay when a function is invoked for the first time or after being idle for a period. Although this is more of a performance issue than a security vulnerability, attackers can potentially exploit these delays to launch denial-of-service (DoS) attacks by overwhelming the serverless functions with frequent requests, causing delays and slowing down service. Managing cold start latency involves optimizing function code and infrastructure, as well as monitoring function invocation patterns to detect and mitigate potential abuse.
