Update 3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md

--- a/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.05 Assess and mitigate the vulnerabilities of security architectures, designs and solution elements.md
@@ -1130,7 +1130,7 @@ Containers enable consistent builds that run identically across development, tes
 
 ## 3.5.11 Serverless ##
 
-Serverless computing is a cloud computing model that allows developers to build and run applications without managing the underlying infrastructure. In serverless architectures, developers focus solely on writing code, while cloud providers handle the provisioning, scaling, and management of servers. Common serverless platforms include AWS Lambda, Azure Functions, and Google Cloud Functions.
+Serverless computing is a cloud computing model that **allows developers to build and run applications without managing the underlying infrastructure**. In serverless architectures, developers focus solely on writing code, while cloud providers handle the provisioning, scaling, and management of servers. Common serverless platforms include AWS Lambda, Azure Functions, and Google Cloud Functions.
 In a serverless environment, functions or small units of code are triggered by events, such as an HTTP request or a message in a queue. These functions run in stateless containers that are ephemeral, meaning they are spun up for the duration of the task and then terminated once the task is complete. This enables highly scalable, efficient, and cost-effective applications, especially for workloads that experience unpredictable or varying traffic.
 Serverless computing offers significant advantages in terms of reduced operational overhead, scalability, and cost optimization. However, it also introduces new security concerns that need to be addressed. 
 
@@ -1159,3 +1159,54 @@ Using the principle of least privilege when assigning permissions to functions a
 To minimize this risk, organizations should assign functions only the minimum permissions required to complete their tasks. Identity and access management (IAM) roles should follow the principle of least privilege, ensuring that functions have access only to the resources necessary for their operation.
 
 7. **Cold Start Latency.** Serverless functions experience what is known as "cold start" latency, where there is a delay when a function is invoked for the first time or after being idle for a period. Although this is more of a performance issue than a security vulnerability, attackers can potentially exploit these delays to launch denial-of-service (DoS) attacks by overwhelming the serverless functions with frequent requests, causing delays and slowing down service. Managing cold start latency involves optimizing function code and infrastructure, as well as monitoring function invocation patterns to detect and mitigate potential abuse.
+
+:link: in the following table some NIST resources about serverless computing:
+
+| Source Type          | Key Resource(s)                                              | Focus Area                                                      | Link                                                                                                                                                            |
+| -------------------- | ------------------------------------------------------------ | --------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **NIST**             | FaaS Serverless Control Framework (CSA)                      | Serverless security mapped to NIST SP 800-53 r5 controls        | [cloudsecurityalliance.org](https://cloudsecurityalliance.org/artifacts/faas-serverless-control-framework-set-based-on-nist-800-53-r5-controls)                 |
+| **NIST**             | SP 800-204 – Security Strategies for Microservices           | Microservices security (applicable to serverless)               | [nist.gov](https://www.nist.gov/news-events/news/2019/08/security-strategies-microservices-based-application-systems-nist-publishes)                            |
+| **NIST**             | SP 800-204C – DevSecOps Primitives for Cloud-Native Apps     | Secure development & deployment for serverless pipelines        | [nvlpubs.nist.gov](https://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-204C.pdf)                                                                  |
+                                                                                                             |
+### Open Questions ###
+
+1. Why does the stateless and ephemeral nature of serverless functions complicate both state management and security monitoring?
+<details>
+  <summary>Show answer</summary>
+Because serverless functions do not retain data or context between executions, developers must use external storage systems (e.g., databases, caches) to manage application state. This decoupling adds complexity, as state consistency must be handled outside the function itself. From a security perspective, ephemeral containers make it harder to track activity or perform forensics—traditional monitoring tools may miss function-level logs or execution traces because functions spin up and terminate so quickly.
+</details>
+
+2. How can excessive IAM permissions in a serverless environment lead to privilege escalation or lateral movement by attackers?
+<details>
+  <summary>Show answer</summary>
+If a serverless function is granted broader permissions than necessary—such as full access to storage, databases, or other cloud services—an attacker who compromises that function could use its role to move laterally in the cloud environment. For example, they could access sensitive data or invoke other functions. Enforcing the principle of least privilege ensures that each function can only access the minimal resources required for its specific purpose, reducing the blast radius of a compromise.
+</details>
+
+3. What is “cold start” latency in serverless computing, and how could attackers exploit it to degrade application performance?
+<details>
+  <summary>Show answer</summary>
+Cold start latency occurs when a serverless function takes extra time to initialize because it hasn’t been invoked recently, requiring the cloud provider to allocate resources and load code. Attackers could exploit this by repeatedly triggering functions to induce constant cold starts, slowing down the application or causing denial-of-service (DoS)–like conditions. Mitigation strategies include keeping functions warm via scheduled triggers, minimizing package size, or using provisioned concurrency (where supported).
+</details>
+
+4. Why does reliance on third-party services and APIs increase the attack surface in serverless architectures, and how should organizations mitigate this risk?
+<details>
+  <summary>Show answer</summary>
+Many serverless applications depend on external APIs or services for core functionality. If a third-party service is compromised, attackers may indirectly gain access to the application or its data. Additionally, vulnerable open-source libraries packaged with serverless functions can introduce known exploits. Organizations should mitigate this by conducting thorough security reviews of third-party services, performing regular vulnerability scanning, maintaining strict SLAs with security requirements, and using automated dependency scanning tools to track and patch vulnerable libraries.
+</details>
+
+5. What challenges does insufficient resource isolation pose in serverless environments, and what measures can reduce this risk?
+<details>
+  <summary>Show answer</summary>
+In multi-tenant cloud environments, serverless functions may share underlying infrastructure. If isolation mechanisms are weak or misconfigured, an attacker could perform a cross-function attack or privilege escalation—gaining unauthorized access to other tenants’ data or services. To reduce this risk, organizations should:
+
+Configure functions within Virtual Private Clouds (VPCs) to limit exposure.
+
+Apply strict IAM policies to control access at the function level.
+
+Use security features offered by the cloud provider (e.g., dedicated execution environments, runtime sandboxing).
+
+Continuously review configurations to prevent privilege misassignments.
+</details>
+
+## 3.5.12 Embedded systems ##
+
